using ramda now

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "watchify": "^2.5.0"
   },
   "dependencies": {
-    "jsml-parse": "^2.0.0"
+    "jsml-parse": "^2.0.0",
+    "ramda": "^0.13.0"
   }
 }
