--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "js/main.js",
   "scripts": {
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,13 +23,12 @@
   "devDependencies": {
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-sass": "^1.3.3",
     "gulp-util": "^3.0.4",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.5.0"
   },
   "dependencies": {
-    "ramda": "^0.13.0"
+    "ramda": "^0.13.0",
+    "virtual-dom": "^2.1.1"
   }
 }
